--- a/style..css
+++ b/style..css
@@ -97,6 +97,17 @@ body {
 
 
 /* responsiveness */
+@media (max-width: 1000px){
+    .about-me-box{
+        height: 310px;
+    }
+    .about-me-box p{
+        padding-top: -10px;
+    }
+}
+
+
+/* responsiveness */
 @media (max-width: 820px){
     .content-box h1{
         font-size: 35px;
@@ -126,7 +137,7 @@ body {
         font-size: 13px;
     }
     /* .about-me-box{
-        height: 420px;
+        height: 300px;
     } */
 }
 
@@ -149,6 +160,10 @@ body {
     .content-box p{
         font-size: 20px
     }
+
+    .about-me-box{
+        height: 250px;
+    }
 }
 
 @media (max-width: 720px){
@@ -163,6 +178,10 @@ body {
 
     .list-header li a{
         font-size: 15px;
+    }
+
+    .about-me-box{
+        height: 300px;
     }
 }
 
